--- a/GUI/appsettings.json
+++ b/GUI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Api": {
+    "ServerAddress": "http://SI_160132_api:80"
+  }
 }
