--- a/Sensors/appsettings.json
+++ b/Sensors/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "RabbitMq": {
+    "Username": "guest",
+    "Password": "guest",
+    "ServerAddress": "rabbitmq://SI_160132_rabbitmq_service"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
