--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "RabbitMq": {
+    "Username": "guest",
+    "Password": "guest",
+    "ServerAddress": "rabbitmq://SI_160132_rabbitmq_service"
+  },
+  "MongoDB": {
+    "Username": "root",
+    "Password": "student",
+    "ServerAddress": "mongodb://mongodb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
