--- a/GUI/appsettings.Development.json
+++ b/GUI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Api": {
+    "ServerAddress": "http://localhost:5000"
   }
 }
