--- a/Sensors/appsettings.Development.json
+++ b/Sensors/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
+  "RabbitMq": {
+    "Username": "guest",
+    "Password": "guest",
+    "ServerAddress": "rabbitmq://localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMQ" : {
+    "Url" : "http://localhost:5672"
   }
 }
