--- a/Sensors/Sensors.csproj
+++ b/Sensors/Sensors.csproj
@@ -6,7 +6,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit" Version="7.3.0-develop.308" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.2.4" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.0-develop.304" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.0-develop.304" />
+        <PackageReference Include="RabbitMQ" Version="3.6.2" />
+        <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
+        <PackageReference Include="RawRabbit.vNext" Version="1.10.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\API\API.csproj" />
+      <ProjectReference Include="..\Model\Model.csproj" />
     </ItemGroup>
 
 </Project>
