Basic api and fixed rabbit

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,9 +5,11 @@
     "ServerAddress": "rabbitmq://localhost"
   },
   "MongoDB": {
+    "DatabaseName": "SI_160132_greenhouse_db",
     "Username": "root",
     "Password": "student",
-    "ServerAddress": "mongodb://mongodb"
+    "ServerAddress": "localhost",
+    "SensorReadoutsCollectionName": "SensorReadouts"
   },
   "Logging": {
     "LogLevel": {
