--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,9 +5,11 @@
     "ServerAddress": "rabbitmq://SI_160132_rabbitmq_service"
   },
   "MongoDB": {
+    "DatabaseName": "SI_160132_greenhouse_db",
     "Username": "root",
     "Password": "student",
-    "ServerAddress": "mongodb://mongodb"
+    "ServerAddress": "admin-mongodb_mongo",
+    "SensorReadoutsCollectionName": "SensorReadouts"
   },
   "Logging": {
     "LogLevel": {
