--- a/API/API.csproj
+++ b/API/API.csproj
@@ -6,6 +6,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Reference Include="Model">
+            <HintPath>./Model.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="MassTransit" Version="7.3.0-develop.308" />
+        <PackageReference Include="MassTransit.AspNetCore" Version="7.2.4" />
+        <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.0-develop.304" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.4" />
+        <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
+        <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+        <PackageReference Include="RawRabbit" Version="1.10.4" />
+        <PackageReference Include="RawRabbit.vNext" Version="1.10.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
