Add methods to get data from api in gui

--- a/GUI/appsettings.json
+++ b/GUI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Api": {
-    "ServerAddress": "http://SI_160132_api:80"
+    "ServerAddress": "http://SI_160132_api"
   }
 }
