Production docker-compose and readme adjustments

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,7 +5,7 @@
     "ServerAddress": "rabbitmq://SI_160132_rabbitmq_service"
   },
   "MongoDB": {
-    "DatabaseName": "SI_160132_greenhouse_db",
+    "DatabaseName": "SI_160132",
     "Username": "root",
     "Password": "student",
     "ServerAddress": "admin-mongodb_mongo",
